fix: link color dark mode

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -18,7 +18,7 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme="dark"] {
+:root[data-theme="dark"] {
   --ifm-color-primary: #20ff00;
   --ifm-color-primary-dark: #1de600;
   --ifm-color-primary-darker: #1bd900;
